# DevTrack

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Modelfile.qwen-dev  PROJECT.md  README.es.md  README.md  build_dist.sh  pyproject.toml
.github/workflows/: ci.yml  publish.yml
devtrack/: cli.py  db.py  fswatcher.py  main.py  ollama.py
devtrack/templates/: dashboard.html
docs/es/: contribuir.md  instalacion.md
scripts/: com.devtrack.fleet-sync.plist  devtrack-fleet-push.sh  devtrack-start.sh  devtrack.service.example
tests/: test_cli.py  test_db.py  test_main.py
